# wlan-cloud-owprov

./: .gitignore  BUILDING.md  CHANGELOG.md  CMakeLists.txt  CONFIGURATION.md  Configuration application.docx  Dockerfile  OPENWIFI.md  README.md  SANITY_CHECK.md  SUBSCRIBERS.md  TAG_SYSTEM.md  buildaws  docker-entrypoint.sh  owprov.properties  owprov.properties.tmpl  owprov.service  package.json  readiness_check  set_env.sh  ucentralgw.service  ucentralprov.properties  wait-for-postgres.sh
.github/workflows/: ci.yaml  ci.yml  cleanup.yml  openapi-pages.yml  release.yml
config-samples/: OpenRo.am Test.mobileconfig  basic-config-no-uuid.json  basic-example.json  dual-ssid-auto-ch-txpwr_bridge.json  dual-ssid-auto-ch_bridge.json  dual-ssid-basic_bridge.json  dual-ssid-rate-limit_bridge.json
docs/: index.html
helm/: .gitignore  Chart.yaml  README.md  values.yaml
helm/templates/: _config.tpl  _helpers.tpl  deployment.yaml  ingress.yaml  pvc.yaml  secret-certs.yaml  secret-config.yaml  secret-env.yaml  secret-regcred.yaml  service.yaml
openapi/: installerportal.yaml  openroaming_globalreach.yaml  openroaming_orion.yaml  ow_or_ameriband.yaml  ow_prov.yaml  owprov.yaml  radius_endpoints.yaml  radius_tunnels.yaml  rrm_provider.yaml  selfcareportal.yaml
src/: ALBHealthCheckServer.h  APConfig.cpp  APConfig.h  APIServers.cpp  AuthClient.cpp  AuthClient.h  AutoDiscovery.cpp  AutoDiscovery.h  CIDRUtils.cpp  CIDRUtils.h  ConfigSanityChecker.cpp  ConfigSanityChecker.h  ConfigurationValidator.cpp  ConfigurationValidator.h  Daemon.cpp  Daemon.h  Dashboard.cpp  Dashboard.h  DeviceTypeCache.h  FileDownloader.cpp  FileDownloader.h  JobController.cpp  JobController.h  JobRegistrations.cpp  Kafka_ProvUpdater.cpp  Kafka_ProvUpdater.h  MicroService.cpp  MicroService.h  OpenAPIRequest.cpp  OpenAPIRequest.h  OpenRoamin_GlobalReach.cpp  OpenRoamin_GlobalReach.h  OpenWifiTypes.h  OrionWifi.h  ProvWebSocketClient.cpp  ProvWebSocketClient.h  RESTAPI_GenericServer.h  RESTAPI_InternalServer.cpp  RESTAPI_InternalServer.h  RESTAPI_ProvObjects.cpp  (+100 more)
src/OpenRoaming/: GlobalReach.cpp  GlobalReach.h  OrionWifi.h
src/RESTAPI/: RESTAPI_InternalServer.cpp  RESTAPI_InternalServer.h  RESTAPI_ProvObjects.cpp  RESTAPI_asset_server.cpp  RESTAPI_asset_server.h  RESTAPI_configurations_handler.cpp  RESTAPI_configurations_handler.h  RESTAPI_configurations_list_handler.cpp  RESTAPI_configurations_list_handler.h  RESTAPI_contact_handler.cpp  RESTAPI_contact_handler.h  RESTAPI_contact_list_handler.cpp  RESTAPI_contact_list_handler.h  RESTAPI_db_helpers.cpp  RESTAPI_db_helpers.h  RESTAPI_entity_handler.cpp  RESTAPI_entity_handler.h  RESTAPI_entity_list_handler.cpp  RESTAPI_entity_list_handler.h  RESTAPI_inventory_handler.cpp  RESTAPI_inventory_handler.h  RESTAPI_inventory_list_handler.cpp  RESTAPI_inventory_list_handler.h  RESTAPI_iptocountry_handler.h  RESTAPI_location_handler.cpp  RESTAPI_location_handler.h  RESTAPI_location_list_handler.cpp  RESTAPI_location_list_handler.h  RESTAPI_managementPolicy_handler.cpp  RESTAPI_managementPolicy_handler.h  RESTAPI_managementPolicy_list_handler.cpp  RESTAPI_managementPolicy_list_handler.h  RESTAPI_managementRole_handler.cpp  RESTAPI_managementRole_handler.h  RESTAPI_managementRole_list_handler.cpp  RESTAPI_managementRole_list_handler.h  RESTAPI_map_handler.cpp  RESTAPI_map_handler.h  RESTAPI_map_list_handler.cpp  RESTAPI_map_list_handler.h  (+53 more)
src/RESTObjects/: RESTAPI_ProvObjects.cpp  RESTAPI_ProvObjects.h  RESTAPI_SecurityObjects.h
src/RadiusEndpointTypes/: GenericRadius.cpp  GenericRadius.h  GlobalReach.cpp  GlobalReach.h  OrionWifi.h  Radsec.cpp  Radsec.h
src/Tasks/: VenueConfigUpdater.cpp  VenueConfigUpdater.h  VenueRebooter.h  VenueUpgrade.h
src/framework/: API_Proxy.h  AppServiceRegistry.h  AuthClient.cpp  AuthClient.h  ConfigurationValidator.cpp  ConfigurationValidator.h  KafkaManager.cpp  KafkaManager.h  MicroService.cpp  MicroService.h  RESTAPI_Handler.h  RESTAPI_SystemConfiguration.h  RESTAPI_errors.h  SubSystemServer.cpp  UI_WebSocketClientServer.cpp  UI_WebSocketClientServer.h  WebSocketClientNotifications.h  orm.h  ow_constants.h  utils.cpp  utils.h
src/libs/: croncpp.h
src/sdks/: SDK_fms.cpp  SDK_fms.h  SDK_gw.cpp  SDK_gw.h  SDK_prov.cpp  SDK_prov.h  SDK_sec.cpp  SDK_sec.h
src/storage/: dbhelpers.h  storage_configurations.cpp  storage_configurations.h  storage_contact.cpp  storage_contact.h  storage_entity.cpp  storage_entity.h  storage_glblraccounts.cpp  storage_glblraccounts.h  storage_glblrcerts.cpp  storage_glblrcerts.h  storage_inventory.cpp  storage_inventory.h  storage_jobs.cpp  storage_jobs.h  storage_location.cpp  storage_location.h  storage_management_roles.cpp  storage_management_roles.h  storage_maps.cpp  storage_maps.h  storage_op_contacts.cpp  storage_op_contacts.h  storage_op_locations.cpp  storage_op_locations.h  storage_operataor.cpp  storage_operataor.h  storage_orion_accounts.cpp  storage_orion_accounts.h  storage_overrides.cpp  storage_overrides.h  storage_policies.cpp  storage_policies.h  storage_radius_endpoints.cpp  storage_radius_endpoints.h  storage_service_class.cpp  storage_service_class.h  storage_signup.cpp  storage_signup.h  storage_sub_devices.cpp  (+7 more)
test_scripts/: update_objects.sh
test_scripts/curl/: block-interfaces-oneSSID-basic-bridge.json  block-metrics.json  block-radios.json  block-services.json  cfg1.json  cli  config_uuid_only.json  import_tree.json  test-config-1.json  test-config-2.json  ws.data
